# hnn-core

./: .buildinfo  .coveragerc  .gitignore  .mailmap  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  ai_fix.patch  api.html  custom_position_check.py  default.param  dipole_duecker_output_old.txt  dpl.txt  dpl2.txt  dual_network_simulation.py  environment.yml  environment_dev.yml  fun.py  fun_con.py  fun_with_pos.py  genindex.html  get_mpi.sh  hnn.cfg  hnn_connect_networks.py  hnn_widget.ipynb  index.html  integ_func.py  minimal_dual_network_simulation.py  morph_dipole.py  objects.inv  paper.bib  paper.md  parallel.html  (+18 more)
.circleci/: build_cache  cache_version  config.yml
_downloads/: plot_simulate_alpha.ipynb  plot_simulate_alpha.py  plot_simulate_evoked.ipynb  plot_simulate_evoked.py  plot_simulate_somato.ipynb
_sources/: api.rst.txt  roadmap.rst.txt  whats_new.rst.txt
auto_examples/: index.html  plot_firing_pattern.html  plot_simulate_alpha.html  plot_simulate_evoked.html  plot_simulate_gamma.html  plot_simulate_mpi_backend.html  plot_simulate_somato.html  sg_execution_times.html
binder/: Dockerfile  postBuild  requirements.txt
dev/: .buildinfo  .buildinfo.bak  api.html  contributing.html  genindex.html  glossary.html  governance.html  how_to_create_releases.html  index.html  install.html  network_file_desc.html  objects.inv  parallel.html  roadmap.html  search.html  searchindex.js  sg_api_usage.html  sg_execution_times.html  whats_new.html
dev_scripts/: convert_params.py  regenerate_base_network.py
doc/: Dockerfile  Makefile  api.rst  conf.py  contributing.md  contributing.rst  glossary.rst  governance.rst  how_to_create_releases.md  index.md  index.rst  install.md  network_file_desc.rst  parallel.rst  roadmap.md  roadmap.rst  sg_execution_times.rst  whats_new.md  whats_new.rst
examples/: README.txt  calculate_dipole_err.py  default_meta_temp_run.py  meta_data_tutorial_documented.ipynb  mpi_plot_simulate_evoked.py  nested_parallel_simulate_evoked.py  network_connectivity.py  optimize_evoked.py  parallel_simulate_evoked.py  plot_connectivity.py  plot_custom_morphologies.py  plot_firing_pattern.py  plot_record_extracellular_potentials.py  plot_simulate_alpha.py  plot_simulate_beta.py  plot_simulate_evoked.py  plot_simulate_evoked_newapi.py  plot_simulate_gamma.py  plot_simulate_lfp.py  (+5 more)
hnn_core/: cell.py  (+54 more)
(+1231 files in other folders)
