[build-system]
requires = ["setuptools>=40.8.0", "NEURON >=7.7; platform_system != 'Windows'"]
build-backend = "setuptools.build_meta:__legacy__"
[tool.codespell]
skip = '.git,*.pdf,*.svg'
check-hidden = true
# in jupyter notebooks - images and also some embedded outputs
ignore-regex = '^\s*"image/\S+": ".*|.*%22%3A%20.*'
ignore-words-list = 'tha,nam,sherif,dout'

[tool.ruff]
exclude = ["*.ipynb"]
[tool.ruff.lint]
exclude = ["__init__.py"]
# We don't include rule "W504", which was in our old flake8 "setup.cfg" file, because the ruff
# linter does not detect it.
ignore = [
   "E722",  # From original flake8 'setup.cfg' file, needed in gui.py and viz.py
]