[build-system]
requires = ["setuptools>=40.8.0", "NEURON >=7.7, <8.2.7; platform_system != 'Windows'"]
build-backend = "setuptools.build_meta:__legacy__"
[tool.codespell]
skip = '.git,*.pdf,*.svg,./hnn_core/mod,./doc/_build,./build'
check-hidden = true
# in jupyter notebooks - images and also some embedded outputs
ignore-regex = '^\s*"image/\S+": ".*|.*%22%3A%20.*'
ignore-words-list = 'tha,nam,sherif,dout'

[tool.ruff]
exclude = ["*.ipynb"]
[tool.ruff.lint]
exclude = ["__init__.py"]
ignore = [
   "E722",  # E722 is a pycodestyle PEP8 style violation called "bare-except".
            # It indicates that the best practice of catching a specific
            # Exception, as opposed to any, was not followed. For more details,
            # see https://www.flake8rules.com/rules/E722.html
]